# StockDeal

./: .dockerignore  .gitignore  Dockerfile  README.md  ak.ipynb  docker-compose.yml  main.py  pyproject.toml
.ruler/: AGENTS.md  ruler.toml
StockDeal/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
StockDeal/src/: App.vue  components.d.ts  main.ts  style.css
StockDeal/src-tauri/: Cargo.toml  tauri.conf.json
StockDeal/src-tauri/src/: main.rs
StockDeal/src/api/: fundAccounts.ts  fundHoldings.ts  funds.ts  http.ts  index.ts  query.ts  setup.ts  stocks.ts  types.ts
StockDeal/src/components/: AppActionBar.vue  AppHeader.vue  AppLayout.vue  AppTabbar.vue
StockDeal/src/router/: index.ts
StockDeal/src/stores/: app.ts
StockDeal/src/views/: AccountNewView.vue  AccountView.vue  HoldingDetailView.vue  HoldingNewView.vue  HomeView.vue  PositionsView.vue  TransactionNewView.vue  WatchlistView.vue
app/: config.py  db.py  db_migration.py  exceptions.py  logging_config.py  main.py  time_utils.py
app/models/: enums.py
app/models/db/: models.py
app/models/schemas/: __init__.py
app/routers/: fund_account_controller.py  fund_controller.py  fund_holding_controller.py  stock_controller.py
app/services/: cache.py  scheduler.py  trading_calendar.py  utils.py
app/services/fund/: fund_account_service.py  fund_conversion_service.py  fund_holding_service.py  fund_service.py
app/services/stock/: stock_service.py
app/utils/: parsing.py  time_utils.py
