[project]
name = "stock-deal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.21",
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
